--- a/src/app/organization-chart.html
+++ b/src/app/organization-chart.html
@@ -1,7 +1,7 @@
 <h1 class="txt-center">ORGANIGRAMA ESTEVEZ.JOR</h1>
 
 <div class="card flex justify-content-center overflow-x-auto cursor-pointer">
-    
+    <!-- Organigrama -->
     <p-organizationChart cdkDrag
         [value]="data" 
         selectionMode="multiple" 
